Remove numpy dependencies <1.22.0 due to security issue with numpy.core component. CVE-2021-34141

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ unittest-parallel = "*"
 preql = "^0.2.17"
 mysql-connector-python = "*"
 databricks-sql-connector = "*"
-snowflake-connector-python = "*"
+snowflake-connector-python = "^2.7.10"
 trino = "^0.314.0"
 psycopg2 = "*"
 presto-python-client = "*"
